--- a/style.css
+++ b/style.css
@@ -160,3 +160,21 @@ main {
 .menu-heading h3 {
     font-weight: normal;
   }
+.footer-logo {
+    float: left;
+    font-size: 32px;
+}
+.kontak-list {
+    float: right;
+}
+
+  footer li {
+    padding-bottom: 20px;
+  }
+  footer {
+    background-color: #165240;
+    color: #fff;
+    height: 120px;
+    padding: 40px;
+    width: 95%;
+  }
