--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ ul  li {
 /*mulai code disini */
 .container{
     width: 1170px;
-margin: 0 auto;
+    margin: 0 auto;
 }
 header a{
     float: left;
@@ -43,7 +43,7 @@ header {
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .1);
 }
 header a{
-    float: left;
+    /* float: left; */
     font-size: 15px;
     text-transform: uppercase;
     color: black;
@@ -160,21 +160,30 @@ main {
 .menu-heading h3 {
     font-weight: normal;
   }
+
+  /* ======= Fotter ============ */
 .footer-logo {
     float: left;
     font-size: 32px;
 }
 .kontak-list {
-    float: right;
+    float: right;   
 }
 
   footer li {
     padding-bottom: 20px;
+    display: inline-block;
+    padding: 5px;
+  }
+  footer,
+  li:hover {
+    color:rgb(255, 0, 0);
+    transition: 500ms;
   }
   footer {
     background-color: #165240;
     color: #fff;
     height: 120px;
     padding: 40px;
-    width: 95%;
+    width: 100%;
   }
