--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ main {
   .profile-box .profile-image img {
     max-width: 100%;
     vertical-align: top;
+    height: 140px;
   }
 
   .profile-box figcaption {
@@ -318,6 +319,7 @@ main {
     text-align: center;
     color: #fff;
     font-size: 35px;
+    border-top: 2px solid white;
   }
   .lokasi {
     display: flex;
@@ -326,6 +328,7 @@ main {
     width: 100%;
     height: 400px;
     border-radius: 10px;
+    
   }
   .lokasi-1 {
     /* display: inline-block; */
@@ -333,6 +336,9 @@ main {
     width: 100%;
     height: 100%;
 
+  }
+  .lokasi-1 p,.lokasi-1 h3, .lokasi-1 h4{
+    color: #b1b1b1;
   }
   .p-lok {
     padding: 10px;
